test/pure/negative/not_pure.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : int -> int[@@gospel {| y = f x |}]
val g : int -> int[@@gospel {| y = g x
    requires f x > 0 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

val f : int -> int
(*@ y = f x
     *)

val g : int -> int
(*@ y = g x
    requires ...
     *)
File "not_pure.mli", line 8, characters 13-14:
Error: Symbol f not found
